# Stale-AI

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  agent_notes.txt  openai_sdk_v1_docs.txt  pyproject.toml  requirements.txt  stale_agent.py
.github/workflows/: tests.yml
app/: analyzer.py  cli.py  codex_runner.py  config.py  evals.py  main.py  models.py  pipeline.py  scanner.py  security.py  settings.py  sources.py  stats.py
app/static/: index.html
examples/github-audit-log-demo/: README.md  staleai.yaml.example  validate_demo.py
examples/github-audit-log-demo/agent/: agent.py  repaired_agent.py
examples/github-audit-log-demo/source/: audit-log-new.md  audit-log-old.md
sample_target/: docs_v2.txt  docs_v3.txt  original_agent.py  test_agent.py
sample_target_openai/: agent.py  agent_notes.txt  original_agent.py  repaired_agent.py
scripts/: demo_api.py  reset_sample.py
tests/: test_cli.py  test_core.py  test_fast_demo.py  test_github_demo.py
