[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "staleai"
version = "0.1.0"
description = "Detect when trusted documentation changes have made an AI agent stale."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "pytest>=8.0",
  "httpx>=0.27",
  "trafilatura>=1.12",
  "typer>=0.12",
  "PyYAML>=6.0",
]

[project.scripts]
staleai = "app.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests", "sample_target"]
norecursedirs = [".venv", ".git", ".pytest_cache", "node_modules", "__pycache__"]
